# telescope

./: .dockerignore  .gitignore  README.md  eval.py  pyproject.toml  train.py
.github/workflows/: docker.yml
configs/: run.yaml
configs/defaults/: default_eval.yaml  default_train.yaml
configs/evals/: eval.yaml
configs/examples/: example_dapo_math.yaml  example_deepscaler.yaml
docker/: Dockerfile  Dockerfile.base
src/telescope/: __init__.py
src/telescope/environments/: __init__.py  base.py  parsers.py  registry.py  rewards.py  tool_env.py
src/telescope/environments/_sandbox/: __init__.py  base.py  daytona.py  e2b_provider.py  modal_provider.py  pool.py  prime.py
src/telescope/environments/countdown/: environment.py  rewards.py
src/telescope/environments/dapo_math/: environment.py
src/telescope/environments/deepdive/: environment.py  open_one.py  rate_limit.py
src/telescope/environments/deepscaler/: environment.py
src/telescope/environments/hendrycks_math/: environment.py
src/telescope/environments/i3_code/: deepcoder_utils.py  environment.py  sandbox_utils.py  verification_utils.py
src/telescope/environments/wordle/: environment.py
src/telescope/eval_standalone/: config_loader.py  config_schema.py  driver.py
src/telescope/evals/: __init__.py  base.py  registry.py
src/telescope/evals/aime_2024/: eval.py
src/telescope/evals/aime_2025/: eval.py
src/telescope/evals/gpqa_diamond/: eval.py
src/telescope/evals/math500/: eval.py
src/telescope/inference/: __init__.py  server.py  worker.py
src/telescope/orchestrator/: __init__.py  batch_processor.py  env_worker_pool.py  eval_runner.py  generate.py  orchestrator.py  scheduler.py
src/telescope/orchestrator/loggers/: __init__.py  event_logger.py  otlp_receiver.py  system_info.py  system_metrics_logger.py  thread_pool_metrics_logger.py  vllm_metrics_logger.py  wandb_logger.py
src/telescope/trainer/: __init__.py  context_parallel.py  loss.py  micro_batch.py  weight_sync.py
src/telescope/trainer/backends/: __init__.py  fsdp.py  megatron.py
src/telescope/trainer/metrics/: __init__.py  timeline.py  torch_memory_logger.py
src/telescope/utils/: checkpoint_converter.py  config.py  config_loader.py  config_schema.py  paths.py
src/telescope/utils/ray_runtime/: __init__.py  runtime.py
src/telescope/utils/tlog/: __init__.py  logger.py  noise_filter.py
tools/: convert_checkpoint_to_hf.py
