[project]
name = "telescope"
version = "0.1.2"
description = "A framework for post-training LLMs with RL for reasoning and agents"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "datasets>=4.4.1",
    "torch>=2.9.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "hf-transfer>=0.1.9",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-proto>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "pyarrow>=15.0.0",
    "ray>=2.9.0",
    "transformers>=4.57.3",
    "vllm==0.17.1",
    "wandb>=0.23.1",
    "zstandard>=0.22.0",
    "liger-kernel>=0.5.10",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3+cu128torch2.10-cp311-cp311-linux_x86_64.whl ; platform_machine == 'x86_64' and python_version == '3.11'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3+cu128torch2.10-cp312-cp312-linux_x86_64.whl ; platform_machine == 'x86_64' and python_version == '3.12'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3+cu128torch2.10-cp313-cp313-linux_x86_64.whl ; platform_machine == 'x86_64' and python_version == '3.13'",
]

[project.optional-dependencies]
megatron = [
    "megatron-core>=0.13.0,<0.17.0",
    "megatron-bridge",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
train = "train:main"
eval = "eval:main"

[tool.uv]
no-build-isolation-package = ["flash-attn"]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
# megatron-bridge==0.3.0 pulls in megatron-core[dev,mlm] whose [dev] extra
# has tightly-pinned CUDA packages (TE <2.10, opentelemetry ~=1.33, mamba-ssm,
# nvidia-modelopt, etc.) that create cascading version conflicts.
# Override megatron-core to strip the [dev] extra, and exclude CUDA-only
# packages from resolution — they are built from source in the Docker image.
# Pattern follows Megatron-Bridge repo.
override-dependencies = [
    "megatron-core>=0.13.0,<0.17.0",
    "transformer-engine; sys_platform == 'never'",
    "transformer-engine-torch; sys_platform == 'never'",
    "nvidia-resiliency-ext; sys_platform == 'never'",
    "mamba-ssm; sys_platform == 'never'",
    "causal-conv1d; sys_platform == 'never'",
    "flash-linear-attention; sys_platform == 'never'",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/telescope"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
